--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,4 @@ language: ruby
 rvm:
   - 2.1.5
 cache: bundler
-script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rspec
+script: bundle exec rspec
