--- a/config/database.yml
+++ b/config/database.yml
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: travis_ci_test
+  database: returnspace_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: returnspace_production
-  username: rails
+  username: returnspace
   password: <%= ENV['RETURNSPACE_DATABASE_PASSWORD'] %>
