--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: ruby
 rvm:
   - 2.1.5
 cache: bundler
-#script: bundle exec rspec
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rspec spec/
