--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
   - bundle exec rspec spec/
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
